# Todolist-Hackathon-Phase-3

./: .backend_ignore_patterns  .frontend_ignore_patterns  .gitignore  AUTHENTICATION_COMPLETE.md  BACKEND_API.md  CLAUDE.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_SETUP.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_README.md  NEXT_STEPS.md  PRODUCTION_HANDOFF.md  PUSH_INSTRUCTIONS.md  README.md  READY_TO_PUSH.md  REMAINING_USER_STORIES_COMPLETE.md  SENDGRID_IMPLEMENTATION.md  TEST_RESULTS.md  folder-structure.md  pyproject.toml
backend/: .dockerignore  .env.example  .env.test  ASYNC_CONVERSION_COMPLETE.md  ASYNC_FIX_SUMMARY.md  CLAUDE.md  DEBUG_TODO_ERROR.md  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  SCHEMA_FIX.md  main.py  pyproject.toml  requirements.txt  test_main.py
backend/api/: auth.py  chat.py  tasks.py
backend/api/middleware/: rate_limit.py
backend/core/: config.py
backend/core/security/: edge_cases.py  jwt.py  password.py
backend/database/: SCHEMA_FIX_README.md  fix_user_schema.py  init_db.py  migrations.py  session.py
backend/dependencies/: __init__.py  auth.py
backend/mcp_server/: server.py
backend/migrations/: 003_add_conversation_tables.py  uuid_migration.py
backend/models/: auth_token.py  category.py  conversation.py  message.py  todo.py  user.py
backend/schemas/: __init__.py  api_response.py  category.py  chat.py  todo.py  user.py
backend/test-backend-apiendpoints/: test_api_endpoints.py
backend/tests/: integration_tests.py  test_auth.py  test_authentication.py  test_config.py  test_docker.py  test_email_service.py  test_email_templates.py  test_health.py  test_login.py  test_password.py  test_password_reset_email.py  test_registration.py  test_todo_crud.py  test_user_model.py
backend/utils/: format_utils.py  id_converter.py
(+484 files in other folders)
