[project]
name = "todolist"
version = "0.1.0"
description = "A simple in-memory todo console application"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
todolist = "adapters.cli.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "adapters"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
